# django-object-level-permissions-poc

./: README.md  pyproject.toml  pytest.ini
olppoc/: coverage.lcov  manage.py
olppoc/customuser/: models.py
olppoc/customuser/migrations/: 0001_initial.py
olppoc/installs/: apps.py  models.py
olppoc/installs/migrations/: 0001_initial.py  0002_remove_install_organisation_and_more.py
olppoc/olppoc/: asgi.py  settings.py  urls.py  wsgi.py
olppoc/orgs/: admin.py  models.py
olppoc/orgs/migrations/: 0001_initial.py  0002_organisation_group.py  0003_remove_organisation_group.py  0004_organisationmember_permissions.py
olppoc/perms/: backends.py  models.py  querysets.py  utils.py
olppoc/perms/migrations/: 0001_initial.py  0002_alter_objectpermission_options_and_more.py
olppoc/perms/tests/: test_models.py  test_utils.py
