[tool.poetry]
name = "django-object-level-permissions-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "olppoc"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
django-guardian = "^2.4.0"
rules = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
